--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="enigma_purple">#673ab7</color>
+    <color name="enigma_purple_light">#EDE7F6</color>
 </resources>
