--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -9,7 +9,7 @@
     <ScrollView
         android:id="@+id/messageScroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1">
 
         <LinearLayout
@@ -23,23 +23,26 @@
         android:id="@+id/inputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="5dp">
 
         <EditText
             android:id="@+id/inputMessage"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:inputType="text" />
+            android:hint="@string/messageInputHint"
+            android:inputType="text"
+            android:labelFor="@+id/inputLayout"
+            android:selectAllOnFocus="false" />
 
         <Button
             android:id="@+id/sendButton"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="68dp"
             android:layout_height="wrap_content"
-            android:text="Send" />
+            android:text="@string/sendButtonText" />
     </LinearLayout>
 
 </LinearLayout>
