--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,9 @@
 
     <style name="EnigmaLight" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorAccent">@color/enigma_purple</item>
-        <item name="android:colorBackground">@color/enigma_purple_light</item>
+        <item name="android:navigationBarColor">@color/enigma_purple</item>
+        <item name="android:colorBackground">@android:color/white</item>
+        <item name="android:statusBarColor">@color/enigma_purple</item>\
     </style>
 
 </resources>
