--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,8 @@
         <item name="android:statusBarColor">@color/enigma_purple</item>\
     </style>
 
+    <style name="EnigmaSendButton" parent="@android:style/Widget.Material.Button.Borderless">
+        <item name="android:textColor">@color/enigma_purple</item>
+    </style>
+
 </resources>
