Replaced Google Auth with Email/Password

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -18,6 +18,11 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
+            <TextView
+                android:id="@+id/userPreview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Username Preview" />
         </LinearLayout>
     </ScrollView>
 
