--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,44 +7,61 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/loginEmail"
+    <ProgressBar
+        android:id="@+id/loginLoading"
+        style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/login_email_hint"
-        android:inputType="textEmailAddress" />
-
-    <EditText
-        android:id="@+id/loginPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/login_password_hint"
-        android:inputType="textPassword" />
+        android:indeterminate="true"
+        android:visibility="gone" />
 
     <LinearLayout
+        android:id="@+id/loginInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:visibility="visible">
 
-        <Button
-            android:id="@+id/loginButton"
-            style="@style/EnigmaSendButton"
+        <EditText
+            android:id="@+id/loginEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="login"
-            android:text="@string/log_in_button_text" />
+            android:ems="10"
+            android:hint="@string/login_email_hint"
+            android:inputType="textEmailAddress" />
 
-        <Button
-            android:id="@+id/signupButton"
-            style="@style/EnigmaSendButton"
+        <EditText
+            android:id="@+id/loginPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="signup"
-            android:text="@string/sign_up_button_text" />
+            android:ems="10"
+            android:hint="@string/login_password_hint"
+            android:inputType="textPassword" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/loginButton"
+                style="@style/EnigmaSendButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="login"
+                android:text="@string/log_in_button_text" />
+
+            <Button
+                android:id="@+id/signupButton"
+                style="@style/EnigmaSendButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="signup"
+                android:text="@string/sign_up_button_text" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
