--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,4 +65,30 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/signupInputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <EditText
+            android:id="@+id/usernameInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/username_input_hint"
+            android:inputType="textPersonName" />
+
+        <Button
+            android:id="@+id/usernameButton"
+            style="@style/EnigmaSendButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="finishSignup"
+            android:text="@string/signup_finish_button_text" />
+    </LinearLayout>
+
 </LinearLayout>
