--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -3,32 +3,21 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:foregroundGravity="bottom"
-    android:orientation="vertical">
+    android:gravity="bottom"
+    android:orientation="vertical"
+    android:weightSum="1">
 
-    <ScrollView
-        android:id="@+id/messageScroll"
+    <ListView
+        android:id="@+id/messageList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1.00"
+        android:footerDividersEnabled="false"
+        android:headerDividersEnabled="false"
+        android:stackFromBottom="true"
+        android:transcriptMode="normal" />
 
-        <LinearLayout
-            android:id="@+id/messageLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/userPreview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:onClick="logout"
-                android:paddingTop="5dp"
-                android:text="Username Preview"
-                android:textAlignment="center" />
-        </LinearLayout>
-    </ScrollView>
+    <View style="@style/Divider"/>
 
     <LinearLayout
         android:id="@+id/inputLayout"
