--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,8 @@
     <style name="EnigmaLight" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorAccent">@color/enigma_purple</item>
         <item name="android:navigationBarColor">@color/enigma_purple</item>
-        <item name="android:colorBackground">@android:color/white</item>
-        <item name="android:statusBarColor">@color/enigma_purple</item>\
+        <item name="android:colorBackground">@color/enigma_purple</item>
+        <item name="android:statusBarColor">@color/enigma_purple</item>
     </style>
 
     <style name="EnigmaSendButton" parent="@android:style/Widget.Material.Button.Borderless">
