Added bunch of shit

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -46,7 +46,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="@string/messageInputHint"
-            android:inputType="text"
+            android:inputType="textCapSentences"
             android:labelFor="@+id/inputLayout"
             android:selectAllOnFocus="false" />
 
